--- a/HangMan/Hangman-backend/package.json
+++ b/HangMan/Hangman-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.15.0",
     "sqlite3": "^5.0.2"
   }
