--- a/HangMan/Hangman-frontend/package.json
+++ b/HangMan/Hangman-frontend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "An awesome game developed by awesome developers",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server --mode development --open"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +22,7 @@
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
